--- a/src/votingapp-redis/Dockerfile
+++ b/src/votingapp-redis/Dockerfile
@@ -1,6 +1,6 @@
 # BUILDER
-FROM golang:stretch AS builder
-RUN apt-get update && apt-get install -y git 
+FROM golang:alpine AS builder
+RUN apk update && apk add git && apk add bash
 
 COPY deps.sh . 
 RUN bash -c './deps.sh'
@@ -11,5 +11,6 @@ RUN go build -o /deploy/votingapp && cp -r ui /deploy
 # RUNTIME
 FROM ubuntu:18.04
 WORKDIR /app
+
 COPY --from=builder /deploy .
 ENTRYPOINT [ "./votingapp" ]
