--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,48 +1,17 @@
-events { worker_connections 1024; }
-
 http {
-    include /etc/nginx/mime.types;
+ 
+ events { worker_connections 1024; }
+ upstream localhost {
 
-    upstream commandsapi {
-        server commands;
+    server votingapp:8000;
+
+ }
+ server {
+    listen 80;
+    server_name localhost;
+    location / {
+       proxy_pass http://localhost;
+       proxy_set_header Host $host;
     }
-
-    upstream queriesapi{
-        server queries;
-    }
-
-    server {
-        listen 80;
-        root /var/www/;
-        index index.html;
-
-        location / {
-            try_files $uri /index.html;
-        }
-
-        location /commands/ {
-            proxy_pass         http://commandsapi/;
-            proxy_redirect     off;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
-        }
-
-        location /queries/ {
-            proxy_pass         http://queriesapi/;
-            proxy_redirect     off;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
-        }
-
-        location /queries/ws {
-            proxy_pass http://queriesapi/ws;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
-        }
-    }
+  }
 }
